crates/oxc_react_compiler/tests/snapshots/labeled-break-within-label-loop.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/labeled-break-within-label-loop.ts
---
import { c as _c } from "react/compiler-runtime";
function useHook(end) {
	const $ = _c(2);
	let log;
	if ($[0] !== end) {
		log = [];
		for (let i = 0; i < end + 1; i++) {
			log.push(`${i} @A`);
			bb0: {
				if (i === end) {
					break bb0;
				}
				log.push(`${i} @B`);
			}
			log.push(`${i} @C`);
		}
		$[0] = end;
		$[1] = log;
	} else {
		log = $[1];
	}
	return log;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useHook,
	params: [1]
};
