crates/oxc_react_compiler/tests/snapshots/lambda-mutate-shadowed-object.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lambda-mutate-shadowed-object.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	const x_0 = [];
	const fn = function() {
		mutate(x_0);
	};
	fn();
	return x;
}
