crates/oxc_react_compiler/tests/snapshots/lambda-mutated-ref-non-reactive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lambda-mutated-ref-non-reactive.js
---
import { c as _c } from "react/compiler-runtime";
function f(a) {
	const $ = _c(2);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = {};
		$[0] = x;
	} else {
		x = $[0];
	}
	let t0;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div x={x} />;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: f,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
