crates/oxc_react_compiler/tests/snapshots/lambda-reassign-shadowed-primitive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lambda-reassign-shadowed-primitive.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let x_0 = 56;
	const fn = function() {
		x_0 = 42;
	};
	fn();
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
