crates/oxc_react_compiler/tests/snapshots/lambda-return-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lambda-return-expression.ts
---
import { invoke } from "shared-runtime";
function useFoo() {
	const x = {};
	const result = invoke(() => x);
	console.log(result);
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [],
	isComponent: false
};
